--- a/AndroidProjects/app/build.gradle
+++ b/AndroidProjects/app/build.gradle
@@ -4,16 +4,18 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     viewBinding {
         enabled = true
     }
 
+
+
     defaultConfig {
         applicationId "com.example.myapplication"
         minSdk 21
-        targetSdk 33
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -36,8 +38,7 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -48,5 +49,6 @@ dependencies {
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
     implementation("com.squareup.retrofit2:converter-moshi:2.9.0")
     implementation("com.squareup.okhttp3:logging-interceptor:4.2.1")
-
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 }
