--- a/AndroidProjects/app/src/main/AndroidManifest.xml
+++ b/AndroidProjects/app/src/main/AndroidManifest.xml
@@ -14,11 +14,15 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".CadastroActivity"
+            android:exported="true" />
+        <activity
             android:name=".DescriptionActivity"
             android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
+            
         </activity>
         <activity
             android:name=".LoginActivity"
@@ -30,5 +34,6 @@
             </intent-filter>
         </activity>
     </application>
-
+<uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 </manifest>
